--- a/src/client/index.html
+++ b/src/client/index.html
@@ -13,7 +13,7 @@
     </script>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="The Mapping Manuscript Migrations project links datasets from Europe and U.S. to provide a global view of the history of medieval and Renaissance manuscripts." />
+    <meta name="description" content="" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <title></title>
   </head>
